--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -1,7 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Catamaran:400,800|Merriweather");
-$mainFont: "Catamaran", sans-serif;
-$secondaryFont: "Merriweather", serif;
-$fontColor: #4b4c53;
+@import '../../sassVars.scss';
 
 .dashboard {
   display: flex;
