--- a/src/sassVars.scss
+++ b/src/sassVars.scss
@@ -2,3 +2,6 @@
 $mainFont: "Catamaran", sans-serif;
 $secondaryFont: "Merriweather", serif;
 $fontColor: #4b4c53;
+$white: #FFFCF2;
+$lightGray: #F6F6F6;
+$backgroundGradient: linear-gradient(45deg, #3d6cb9, #00d1ff);
