--- a/src/reset.scss
+++ b/src/reset.scss
@@ -25,6 +25,15 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background-color: #FFFCF2;
+}
+::-moz-selection {
+	background: #00fff0;
+	color: #4b4c53;
+}
+::selection {
+	background: #00fff0;
+	color: #4b4c53;
 }
 ol, ul {
 	list-style: none;
