--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -16,15 +16,19 @@
   align-items: center;
   padding: 0 1em;
   overflow: hidden;
-  > h1 {
-    font-family: $mainFont;
-    font-weight: 800;
-    font-size: 2.8em;
-    color: $fontColor;
-    width: 4em;
-    padding: 0;
-    margin: 0;
-    // line-height: 0.5em;
+  > a {
+    text-decoration: none;
+    h1 {
+      cursor: pointer;
+      font-family: $mainFont;
+      font-weight: 800;
+      font-size: 2.8em;
+      color: $fontColor;
+      width: 4em;
+      padding: 0;
+      margin: 0;
+      // line-height: 0.5em;
+    }  
   }
   > div {
     display: flex;
