--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -7,7 +7,7 @@
 }
 
 .main {
-  background-color: #FFFFFF;
+  background-color: $white;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
