--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,5 +1,4 @@
 @import '../../sassVars.scss';
-
 .home {
   position: relative;
   height: auto;
@@ -63,7 +62,7 @@
 }
 .big-triangle {
   height: 200vh;
-  min-height: 1800px;
+  // min-height: 1800px;
   width: 70vw;
   background: linear-gradient(to right, #3d6cb9, #00d1ff);
   position: relative;
@@ -82,7 +81,6 @@
   // top: 0;
   // left: 200px;
 }
-
 .hook {
   height: 26em;
   width: 30em;
@@ -114,7 +112,6 @@
     }
   }
 }
-
 .leaderboard {
   font-family: $mainFont;
   color: $fontColor;
