--- a/src/components/Dashboard/CreateSet.scss
+++ b/src/components/Dashboard/CreateSet.scss
@@ -1,158 +1,154 @@
-@import '../../sassVars.scss';
+@import "../../sassVars.scss";
 
 .create-set-page {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-around;
-    align-items: stretch;
-    align-content: stretch;
-    background: linear-gradient(45deg, #3d6cb9, #00d1ff);
-    color: white;
-    font-family: $secondaryFont;
-    padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: stretch;
+  align-content: stretch;
+  background: linear-gradient(45deg, #3d6cb9, #00d1ff);
+  color: white;
+  font-family: $secondaryFont;
+  // padding: 1rem;
+  max-height: 100vh;
+  
+  .user-input {
+    display: inline-block;
+    text-align: center;
+    border-bottom: 1rem;
 
-}
-
-.question-category{
-    font-weight: 700 !important;
-}
-
-.question-list{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-y: scroll;
-    height: 100vh;  
-
-    .back-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        left: 1rem;
-        height: 2em;
-        width: 5em;
-        border: 1px #FFED17 solid;
-        border-radius: 0.5em;
-        font-size: 1.2em;
-        margin-bottom: 2em;
-        align-self: center;
-        background: #1da0dd;
-        color: #FFFCF2;
-        &:hover {
-          cursor: pointer;
-          background:#FFED17;
-          color: $fontColor;
-          transition: 0.3s;
-        }
-    }
-}
-
-
-.question-to-display{
-    display: flex;
-    border: .1rem solid black;
-    border-radius: 10px;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 2px 2px 4px black;
-    margin: .7rem;
-    padding: .3rem;
-    width: 23rem;
-    background-color: $white;
-    color: $fontColor;
-}
-
-.your-questions-to-display{
-    display: flex;
-    border: .1rem solid black;
-    border-radius: 10px;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 2px 2px 4px black;
-    margin: .7rem;
-    padding: .3rem;
-    width: 23rem;                          
-}
-.title{
+  }
+  .title {
     font-family: $mainFont;
     font-size: x-large;
-    display:flex; 
+    display: flex;
     justify-content: center;
-    
-    .user-input{
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: baseline;
-        position: fixed;
-        border-bottom: 1rem;
-                
-        input{
-            color: white;
-            background: transparent;
-            border: none;
-            border-bottom: 1px solid white;
-        }
+    padding: 1em;
+
+  }
+  input {
+    color: $fontColor;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid $fontColor;
+    width: 70%;
+    &::placeholder {
+      color: $fontColor;
     }
+  }
+}
+
+.question-list {
+  max-height: 50%;
+  overflow-y: scroll;
+  color: $fontColor;
+  display: flex;
+  flex-direction: column;
+  font-size: 1em;
+  border-radius: 0.5em;
+  background: #fffcf2;
+  box-shadow: 5px 5px 15px #333;
+  font-weight: 500;
+  margin: 1em;
+  width: 50vw;
+
+  .question-to-display {
+    display: flex;
+    // flex-direction: row;
+    justify-content: space-between;
+    margin: 0.3em 2em;
+    border-bottom: 0.5px darkgray solid;
+    padding: 0.4em;
+    align-items: center;
+    .question-category {
+      font-weight: 700;
+      width: 40%;
+    }
+    .question-item {
+      text-align: right;
+      margin-left: 3rem;
+    }
+  }
+
+  .back-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 1;
+    height: 2em;
+    width: 5em;
+    border: 1px #ffed17 solid;
+    margin-left: 1.8em;
+    margin-top: .8em;
+    border-radius: 0.5em;
+    font-size: 1.2em;
+    margin-bottom: 2em;
+    align-self: center;
+    background: #1da0dd;
+    color: #fffcf2;
+    &:hover {
+      cursor: pointer;
+      background: #ffed17;
+      color: $fontColor;
+      transition: 0.3s;
+    }
+  }
 }
 
 .select {
-    position: relative;
-    display: inline-block;
-    margin-bottom: 15px;
-    width: 65%;
-}    .select select {
-        font-family: 'Arial';
-        display: inline-block;
-        width: 100%;
-        cursor: pointer;
-        padding: 7px 21px;
-        outline: 0;
-        border: 1px outset #4b4c53;
-        border-radius: 36px;
-        background: #e6e6e6;
-        color: #4b4c53;
-        appearance: none;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-    }
-        .select select::-ms-expand {
-            display: none;
-        }
-        .select select:hover,
-        .select select:focus {
-            color: #4b4c53;
-            background: #FFFCF2;
-        }
-        .select select:disabled {
-            opacity: 0.5;
-            pointer-events: none;
-        }
+  position: relative;
+  display: inline-block;
+  margin-bottom: 15px;
+  width: 65%;
+  margin-left: 4.5rem;
+  text-align: center;
+}
+.select select {
+  font-family: "Arial";
+  display: inline-block;
+  width: 100%;
+  cursor: pointer;
+  padding: 7px 21px;
+  outline: 0;
+  border: 1px outset #4b4c53;
+  border-radius: 36px;
+  background: #e6e6e6;
+  color: #4b4c53;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+.select select::-ms-expand {
+  display: none;
+}
+.select select:hover,
+.select select:focus {
+  color: #4b4c53;
+  background: #fffcf2;
+}
+.select select:disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
 .select_arrow {
-    position: absolute;
-    top: 8px;
-    right: 23px;
-    width: 0px;
-    height: 0px;
-    border: solid #7b7b7b;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
+  position: absolute;
+  top: 8px;
+  right: 23px;
+  width: 0px;
+  height: 0px;
+  border: solid #7b7b7b;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
 }
 .select select:hover ~ .select_arrow,
 .select select:focus ~ .select_arrow {
-    border-color: #000000;
+  border-color: #000000;
 }
 .select select:disabled ~ .select_arrow {
-    border-top-color: #cccccc;
+  border-top-color: #cccccc;
 }
-
-
-
-
-
-
-
