--- a/src/components/JoinRoom/JoinRoom.scss
+++ b/src/components/JoinRoom/JoinRoom.scss
@@ -35,7 +35,7 @@
   > input {
     font-size: 4em;
     height: 1.2em;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid $fontColor;
     border-top: none;
     border-left: none;
     border-right: none;
@@ -43,6 +43,7 @@
     text-align: center;
     margin-top: 2em;
     color: #FFFCF2;
+    transition: 1s;
     &::placeholder {
       font-family: $mainFont;
       color: #FFFCF2;
@@ -50,7 +51,19 @@
     &:focus {
       outline: none;
       background-color: #0099ff;
-      border-radius: 5px;
+      border-radius: 10px;
+    }
+    &:hover {
+      background-color: #0099ff;
+      border-radius: 10px;
+    }
+  }
+  .guest-name-input {
+    font-size: 2em;
+    margin-top: 1rem;
+    font-family: $secondaryFont;
+    &::placeholder {
+      font-family: $secondaryFont;
     }
   }
   .join-button {
@@ -58,10 +71,14 @@
     justify-content: center;
     align-items: center;
     height: 2em;
-    width: 4em;
+    width: 5em;
     border: 1px #FFED17 solid;
     border-radius: 0.5em;
-    margin-top: 4em;
+    font-size: 1.2em;
+    margin-top: 3em;
+    align-self: center;
+    background: transparent;
+    color: #FFFCF2;
     &:hover {
       background: #FFED17;
       color: $fontColor;
