--- a/src/components/Dashboard/CreateSet.scss
+++ b/src/components/Dashboard/CreateSet.scss
@@ -7,24 +7,22 @@
   justify-content: space-around;
   align-items: stretch;
   align-content: stretch;
-  background: linear-gradient(45deg, #3d6cb9, #00d1ff);
   color: white;
   font-family: $secondaryFont;
-  // padding: 1rem;
-  max-height: 100vh;
-  
+  max-height: 80vh;
+  margin: 0 1rem;
+
   .user-input {
     display: inline-block;
     text-align: center;
     border-bottom: 1rem;
-
   }
   .title {
     font-family: $mainFont;
-    font-size: x-large;
+    font-size: 2rem;
     display: flex;
     justify-content: center;
-    padding: 1em;
+    margin: 1rem 0;
 
   }
   input {
@@ -37,67 +35,67 @@
       color: $fontColor;
     }
   }
-}
-
-.question-list {
-  max-height: 50%;
-  overflow-y: scroll;
-  color: $fontColor;
-  display: flex;
-  flex-direction: column;
-  font-size: 1em;
-  border-radius: 0.5em;
-  background: #fffcf2;
-  box-shadow: 5px 5px 15px #333;
-  font-weight: 500;
-  margin: 1em;
-  width: 50vw;
-
-  .question-to-display {
+  .question-list {
+    max-height: 50%;
+    overflow-y: scroll;
+    color: $fontColor;
     display: flex;
-    // flex-direction: row;
-    justify-content: space-between;
-    margin: 0.3em 2em;
-    border-bottom: 0.5px darkgray solid;
-    padding: 0.4em;
-    align-items: center;
-    .question-category {
-      font-weight: 700;
-      width: 40%;
-    }
-    .question-item {
-      text-align: right;
-      margin-left: 3rem;
-    }
-  }
-
-  .back-button {
-    display: flex;
-    font-family: $mainFont;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    padding: .8em 1em;
-    left: 1;
-    height: 1.3em;
-    width: 4em;
-    border: 1px #ffed17 solid;
-    margin-left: 2.1em;
-    margin-top: 1.3em;
-    border-radius: 0.5em;
+    flex-direction: column;
     font-size: 1em;
-    margin-bottom: 2em;
-    align-self: center;
-    background: #1da0dd;
-    color: #fffcf2;
-    &:hover {
-      cursor: pointer;
-      background: #ffed17;
+    background: $lightGray;
+    font-weight: 500;
+    margin: 1em;
+    width: 50vw;
+    padding: 1rem;
+    position: relative;
+    .question-to-display {
+      display: flex;
+      // flex-direction: row;
+      justify-content: space-between;
+      border-bottom: 0.5px darkgray solid;
+      padding: 0.4em;
+      align-items: center;
+      line-height: 1.4rem;
+      .question-category {
+        font-weight: 700;
+        width: 40%;
+      }
+      .question-item {
+        text-align: right;
+        margin-left: 3rem;
+      }
+    }
+  
+    .back-button {
+      display: flex;
+      font-family: $mainFont;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      padding: .8em 1em;
+      left: -1rem;
+      top: .7rem;
+      height: 1.3em;
+      width: 4em;
+      border: 1px #0d89f3 solid;
+      margin-left: 2.1em;
+      margin-top: 1.3em;
+      border-radius: 0.5em;
+      font-size: 1em;
+      margin-bottom: 2em;
+      align-self: center;
+      // background: #0d89f3;
       color: $fontColor;
       transition: 0.3s;
+      &:hover {
+        cursor: pointer;
+        background: #0d89f3;
+        color: $white;
+      }
     }
   }
 }
+
 
 .select {
   position: relative;
@@ -108,17 +106,19 @@
   text-align: center;
 }
 .select select {
-  font-family: "Arial";
+  font-family: $mainFont;
+  font-size: 1rem;
   display: inline-block;
   width: 100%;
   cursor: pointer;
-  padding: 7px 21px;
+  padding: 0 21px;
   outline: 0;
   border: 1px outset #4b4c53;
   border-radius: 36px;
   background: #e6e6e6;
   color: #4b4c53;
   appearance: none;
+  transition: .2s;
   -webkit-appearance: none;
   -moz-appearance: none;
 }
@@ -136,7 +136,7 @@
 }
 .select_arrow {
   position: absolute;
-  top: 8px;
+  top: 9px;
   right: 23px;
   width: 0px;
   height: 0px;
@@ -145,6 +145,7 @@
   display: inline-block;
   padding: 3px;
   transform: rotate(45deg);
+  transition: .2s;
   -webkit-transform: rotate(45deg);
 }
 .select select:hover ~ .select_arrow,
