--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -53,6 +53,7 @@
     display: flex;
     z-index: 1;
     div {
+      font-family: $mainFont;
       background: transparent;
       cursor: pointer;
       display: flex;
