--- a/src/components/CreateRoom/CreateRoom.scss
+++ b/src/components/CreateRoom/CreateRoom.scss
@@ -27,6 +27,7 @@
     }
   }
   .set-container {
+    min-height: 45%;
     max-height: 50%;
     overflow: auto;
     color: $fontColor;
@@ -46,10 +47,11 @@
       display: flex;
       // flex-direction: row;
       justify-content: space-between;
-      margin: 0.3em 2em;
+      margin: 0.4em 2em;
       border-bottom: 0.5px darkgray solid;
       padding: 0.15em;
       align-items: center;
+      font-size: 1.5rem;
     }
     .create-button {
       padding: 0.35em 0.65em;
@@ -57,7 +59,7 @@
       border-radius: 0.3em;
       opacity: 0.8;
       box-shadow: 0.5px 0.5px 5px #333;
-      font-size: 0.75em;
+      font-size: 1.1rem;
       &:hover {
         cursor: pointer;
         color: #FFFCF2;
@@ -67,9 +69,105 @@
         border: 1px solid #FFED17;
       }
     }
-    width: 50%;
+    width: 60%;
   }
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media(max-width: 1160px) {
+  .create .set-container {
+    width: 70%;
+  }
+}
+
+@media(max-width: 1020px) {
+  .create .set-container {
+    .set {
+      font-size: 1.2rem;
+      .set-name {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        overflow-wrap: break-word;
+      }
+      .create-button {
+        width: 120px;
+      }
+    }
+    h2 {
+      font-size: 2.75rem;
+    }
+  } 
+}
+
+@media(max-width: 825px) {
+  .create .set-container {
+    .set {
+      font-size: 1rem;
+      margin: 0em 2em;
+      height: 3.4rem;
+      .create-button {
+        padding: 0.2em 0.4em;
+      }
+    }
+    h2 {
+      font-size: 2.3rem;
+    }
+  }
+}
+
+@media(max-width: 675px) {
+  .create {
+    padding: 1.5em;
+    .set-container {
+      width: 90%;
+      .set {
+        height: 3.6rem;
+        font-size: 0.85rem;
+        margin: 0em 2em;
+      }
+      h2 {
+        font-size: 2rem;
+      }
+    }
+  } 
+}
+
+@media(max-width: 500px) {
+  .create .set-container {
+    width: 100%;
+    .set .create-button {
+      width: 112px;
+    }
+  }
+}
+
+@media(max-width: 414px) {
+  .create {
+    .set-container {
+      max-height: 75%;
+    }
+  }
+}
+
+@media(max-width: 400px) {
+  .create {
+    .back-button {
+      margin-top: 1em;
+      margin-bottom: 0.75em;
+    }
+    .set-container {
+      margin: 0.9em 1.3em;
+      .set {
+        margin: 0 1em;
+        .create-button {
+          font-size: 1rem;
+          max-height: 26.03px;
+          min-width: 102px;
+        }
+      }
+    }
+  } 
 }
